--- a/airbnb_shared_project.ipynb
+++ b/airbnb_shared_project.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -175,6 +175,14 @@
      "text": [
       "Accuracy: 0.591506406503\n",
       "F1 score: 0.561747196972\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/anlee/anaconda/envs/python2/lib/python2.7/site-packages/sklearn/metrics/classification.py:1074: UndefinedMetricWarning: F-score is ill-defined and being set to 0.0 in labels with no predicted samples.\n",
+      "  'precision', 'predicted', average, warn_for)\n"
      ]
     }
    ],
@@ -189,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -198,7 +206,9 @@
     "# Predict test data.\n",
     "test_predictions = mnb.predict(test_data_x)\n",
     "output = pd.concat([test_data[\"id\"], pd.DataFrame(test_predictions, columns=[\"country\"])], axis=1)\n",
-    "output.to_csv(\"submissions/annie_base_submission.csv\", index=False)"
+    "# Update version everytime!\n",
+    "version = 1\n",
+    "output.to_csv(\"submissions/shared_submission_{0}.csv\".format(version), index=False)"
    ]
   },
   {
