--- a/airbnb_shared_project.ipynb
+++ b/airbnb_shared_project.ipynb
@@ -2,9 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -96,50 +96,22 @@
      "text": [
       "Train data shape: (213451, 6)\n",
       "Test data shape: (62096, 6)\n",
-      "Train labels shape: (213451,)\n"
+      "Train labels shape: (213451,)\n",
+      "[[ 0  1  5  3  8  0]\n",
+      " [ 2  1  5  3  8 38]\n",
+      " [ 1  0  5  6 21 56]\n",
+      " [ 1  1  5  3 17 42]\n",
+      " [ 0  0  5  3  8 41]]\n"
      ]
     }
    ],
    "source": [
-    "# Helper function to extract features.\n",
-    "def ExtractFeatures(data):\n",
-    "    # Choose a subset of categorical columns.\n",
-    "    categorical_columns = [\"gender\", \"signup_method\", \"language\", \"first_device_type\", \"first_browser\"]\n",
-    "    categorical_values = np.array(data[categorical_columns])\n",
-    "\n",
-    "    # Do the first column\n",
-    "    enc_label = preprocessing.LabelEncoder()\n",
-    "    features_data = enc_label.fit_transform(categorical_values[:,0])\n",
-    "\n",
-    "    # Do the rest of the columns\n",
-    "    for i in range(1, categorical_values.shape[1]):\n",
-    "            enc_label = preprocessing.LabelEncoder()\n",
-    "            features_data = np.column_stack((features_data,\n",
-    "                                             enc_label.fit_transform(categorical_values[:,i])))\n",
-    "\n",
-    "    # Add age to features.\n",
-    "    # Clean up age data.\n",
-    "    data[\"age\"] = data[\"age\"].fillna(0)\n",
-    "    # Add age data to training data.\n",
-    "    features_data = np.column_stack((features_data, np.array(data[\"age\"])))\n",
-    "    # Convert to matrix of ints.\n",
-    "    features_data = features_data.astype(int)\n",
-    "    return features_data\n",
-    "\n",
-    "# Extract and format features for training and test data.\n",
-    "train_data_x = ExtractFeatures(train_data)\n",
-    "test_data_x = ExtractFeatures(test_data)\n",
-    "print \"Train data shape: {0}\".format(train_data_x.shape)\n",
-    "print \"Test data shape: {0}\".format(test_data_x.shape)\n",
-    "\n",
-    "# Extract train labels.\n",
-    "train_data_y = np.array(train_data[\"country_destination\"])\n",
-    "print \"Train labels shape: {0}\".format(train_data_y.shape)"
+    "-"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -164,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -181,7 +153,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/anlee/anaconda/envs/python2/lib/python2.7/site-packages/sklearn/metrics/classification.py:1074: UndefinedMetricWarning: F-score is ill-defined and being set to 0.0 in labels with no predicted samples.\n",
+      "/Users/Jun/anaconda/lib/python2.7/site-packages/sklearn/metrics/classification.py:1074: UndefinedMetricWarning: F-score is ill-defined and being set to 0.0 in labels with no predicted samples.\n",
       "  'precision', 'predicted', average, warn_for)\n"
      ]
     }
