--- a/airbnb_shared_project.ipynb
+++ b/airbnb_shared_project.ipynb
@@ -2,13 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 2,
-=======
    "execution_count": 37,
->>>>>>> fc2f2f6e1bdad520808e14bfc0b6b4b1bd554d64
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -34,11 +30,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 3,
-=======
    "execution_count": 2,
->>>>>>> fc2f2f6e1bdad520808e14bfc0b6b4b1bd554d64
    "metadata": {
     "collapsed": false
    },
@@ -95,11 +87,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 5,
-=======
    "execution_count": 3,
->>>>>>> fc2f2f6e1bdad520808e14bfc0b6b4b1bd554d64
    "metadata": {
     "collapsed": false
    },
@@ -110,26 +98,50 @@
      "text": [
       "Train data shape: (213451, 6)\n",
       "Test data shape: (62096, 6)\n",
-      "Train labels shape: (213451,)\n",
-      "[[ 0  1  5  3  8  0]\n",
-      " [ 2  1  5  3  8 38]\n",
-      " [ 1  0  5  6 21 56]\n",
-      " [ 1  1  5  3 17 42]\n",
-      " [ 0  0  5  3  8 41]]\n"
+      "Train labels shape: (213451,)\n"
      ]
     }
    ],
    "source": [
-    "-"
+    "# Helper function to extract features.\n",
+    "def ExtractFeatures(data):\n",
+    "    # Choose a subset of categorical columns.\n",
+    "    categorical_columns = [\"gender\", \"signup_method\", \"language\", \"first_device_type\", \"first_browser\"]\n",
+    "    categorical_values = np.array(data[categorical_columns])\n",
+    "\n",
+    "    # Do the first column\n",
+    "    enc_label = preprocessing.LabelEncoder()\n",
+    "    features_data = enc_label.fit_transform(categorical_values[:,0])\n",
+    "\n",
+    "    # Do the rest of the columns\n",
+    "    for i in range(1, categorical_values.shape[1]):\n",
+    "            enc_label = preprocessing.LabelEncoder()\n",
+    "            features_data = np.column_stack((features_data,\n",
+    "                                             enc_label.fit_transform(categorical_values[:,i])))\n",
+    "\n",
+    "    # Add age to features.\n",
+    "    # Clean up age data.\n",
+    "    data[\"age\"] = data[\"age\"].fillna(0)\n",
+    "    # Add age data to training data.\n",
+    "    features_data = np.column_stack((features_data, np.array(data[\"age\"])))\n",
+    "    # Convert to matrix of ints.\n",
+    "    features_data = features_data.astype(int)\n",
+    "    return features_data\n",
+    "\n",
+    "# Extract and format features for training and test data.\n",
+    "train_data_x = ExtractFeatures(train_data)\n",
+    "test_data_x = ExtractFeatures(test_data)\n",
+    "print \"Train data shape: {0}\".format(train_data_x.shape)\n",
+    "print \"Test data shape: {0}\".format(test_data_x.shape)\n",
+    "\n",
+    "# Extract train labels.\n",
+    "train_data_y = np.array(train_data[\"country_destination\"])\n",
+    "print \"Train labels shape: {0}\".format(train_data_y.shape)"
    ]
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 6,
-=======
    "execution_count": 4,
->>>>>>> fc2f2f6e1bdad520808e14bfc0b6b4b1bd554d64
    "metadata": {
     "collapsed": false
    },
@@ -154,11 +166,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 7,
-=======
    "execution_count": 13,
->>>>>>> fc2f2f6e1bdad520808e14bfc0b6b4b1bd554d64
    "metadata": {
     "collapsed": false
    },
@@ -173,17 +181,6 @@
       "Accuracy: 0.591506406503\n",
       "F1 score: 0.561747196972\n"
      ]
-<<<<<<< HEAD
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/Jun/anaconda/lib/python2.7/site-packages/sklearn/metrics/classification.py:1074: UndefinedMetricWarning: F-score is ill-defined and being set to 0.0 in labels with no predicted samples.\n",
-      "  'precision', 'predicted', average, warn_for)\n"
-     ]
-=======
->>>>>>> fc2f2f6e1bdad520808e14bfc0b6b4b1bd554d64
     }
    ],
    "source": [
