added scoreing function

--- a/airbnb_shared_project.ipynb
+++ b/airbnb_shared_project.ipynb
@@ -2,9 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 33,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -14,14 +14,16 @@
     "# General libraries.\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "from sklearn import preprocessing\n",
+    "import math\n",
     "\n",
+    "from sklearn import preprocessing\n",
     "# SK-learn libraries for learning.\n",
     "from sklearn.pipeline import Pipeline\n",
     "\n",
     "from sklearn.neighbors import KNeighborsClassifier\n",
     "from sklearn.naive_bayes import MultinomialNB\n",
     "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.ensemble import RandomForestClassifier    \n",
     "from sklearn.grid_search import GridSearchCV\n",
     "\n",
     "# SK-learn libraries for evaluation.\n",
@@ -30,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 34,
    "metadata": {
     "collapsed": false
    },
@@ -87,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 35,
    "metadata": {
     "collapsed": false
    },
@@ -141,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 36,
    "metadata": {
     "collapsed": false
    },
@@ -151,7 +153,7 @@
      "output_type": "stream",
      "text": [
       "(170760, 6) (170760,)\n",
-      "(42691, 6) (42691,)\n"
+      "(42691, 6) (42691,) (42691,)\n"
      ]
     }
    ],
@@ -159,14 +161,90 @@
     "# Split train data into training and dev sets.\n",
     "train_data_size = (len(train_data_x))/5*4\n",
     "train_x, train_y = train_data_x[:train_data_size], train_data_y[:train_data_size]\n",
-    "dev_x, dev_y = train_data_x[train_data_size:], train_data_y[train_data_size:]\n",
+    "dev_x, dev_y= train_data_x[train_data_size:], train_data_y[train_data_size:]\n",
+    "\n",
+    "# save dev id to be used in score calculation\n",
+    "dev_id = np.array(train_data[\"id\"][train_data_size:])\n",
+    "dev_dict = dict(zip(dev_id, dev_y))\n",
+    "\n",
     "print train_x.shape, train_y.shape\n",
-    "print dev_x.shape, dev_y.shape"
+    "print dev_x.shape, dev_y.shape, dev_id.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 37,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Calculate DCG score based on Kaggle evaluation doc\n",
+    "def FinalScore(predictions):\n",
+    "    to_print = False\n",
+    "    \n",
+    "    k, dcg, score, num_pred= 0, 0.0, 0.0, 0\n",
+    "    cur_id = predictions[0][0]\n",
+    "    \n",
+    "    for i, p in enumerate(predictions):\n",
+    "        if p[0] != cur_id:\n",
+    "            score += dcg\n",
+    "            num_pred +=1\n",
+    "            if to_print: print \"id: %s -- DCG: %7.4f\"%(cur_id, dcg)\n",
+    "\n",
+    "            #start a new group\n",
+    "            k, dcg, cur_id = 0, 0.0, p[0]\n",
+    "            if to_print: print \"\\nnew id\", cur_id\n",
+    "\n",
+    "        k += 1  \n",
+    "        rel, mark = 0, '  X'\n",
+    "        if p[1] == dev_dict[cur_id]:\n",
+    "            rel, mark = 1, 'V'\n",
+    "        dcg += (pow(2,rel) - 1)*1. / math.log(k+1,2)\n",
+    "\n",
+    "        if to_print: print i, mark, cur_id, p, p[1], k, dcg\n",
+    "    \n",
+    "    #process the last id group\n",
+    "    score += dcg\n",
+    "    num_pred +=1\n",
+    "    if to_print: print \"id: %s -- DCG: %7.4f\"%(cur_id, dcg)\n",
+    "\n",
+    "    return score/num_pred"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Return top 5 prediction result per example given a trained model\n",
+    "def Predict_Top5(m):\n",
+    "    prob_est = m.predict_proba(dev_x)\n",
+    "    predictions = []\n",
+    "    \n",
+    "    for i, example in enumerate(prob_est):\n",
+    "        sorted_scores = np.sort(example)\n",
+    "        top_5 = sorted_scores[len(sorted_scores) - 5:]\n",
+    "        for score in reversed(top_5):\n",
+    "            index_of_score = example.tolist().index(score)\n",
+    "            predictions.append((dev_id[i], m.classes_[index_of_score]))\n",
+    "    \n",
+    "    return predictions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Multinomial Naive Bayes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
    "metadata": {
     "collapsed": false
    },
@@ -196,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 40,
    "metadata": {
     "collapsed": false
    },
@@ -207,12 +285,13 @@
     "output = pd.concat([test_data[\"id\"], pd.DataFrame(test_predictions, columns=[\"country\"])], axis=1)\n",
     "# Update version everytime!\n",
     "version = 1\n",
-    "output.to_csv(\"submissions/shared_submission_{0}.csv\".format(version), index=False)"
+    "output.to_csv(\"submissions/shared_submission_{0}.csv\".format(version), index=False)\n",
+    "# Ranks 1304 with score of 0.63168."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 41,
    "metadata": {
     "collapsed": true
    },
@@ -235,7 +314,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 42,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "final score: 0.77351\n"
+     ]
+    }
+   ],
+   "source": [
+    "print \"\\nfinal score: %7.5f\"%(FinalScore(Predict_Top5(mnb)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Logistic Regression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
    "metadata": {
     "collapsed": false
    },
@@ -258,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 44,
    "metadata": {
     "collapsed": true
    },
@@ -277,6 +383,99 @@
     "version = 3\n",
     "output3.to_csv(\"submissions/shared_submission_{0}.csv\".format(version), index=False)\n",
     "# Ranks 1047 with score of 0.85894."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "final score: 0.82483\n"
+     ]
+    }
+   ],
+   "source": [
+    "print \"\\nfinal score: %7.5f\"%(FinalScore(Predict_Top5(lr)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Random Forest"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "F1 score: 0.602676826717\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Train Random forest.\n",
+    "rf= RandomForestClassifier()\n",
+    "rf.fit(train_x, train_y)\n",
+    "rf_predictions = rf.predict(dev_x)\n",
+    "print \"F1 score: {0}\".format(metrics.f1_score(dev_y,rf_predictions,average=\"weighted\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Predict Top 5 cities for each test example using Random forest model.\n",
+    "prob_est = rf.predict_proba(test_data_x)\n",
+    "predictions = []\n",
+    "for i, example in enumerate(prob_est):\n",
+    "    sorted_scores = np.sort(example)\n",
+    "    top_5 = sorted_scores[len(sorted_scores) - 5:]\n",
+    "    for score in reversed(top_5):\n",
+    "        index_of_score = example.tolist().index(score)\n",
+    "        predictions.append((test_data[\"id\"][i], rf.classes_[index_of_score]))\n",
+    "output4 = pd.DataFrame(predictions, columns=[\"id\", \"country\"])\n",
+    "version = 4\n",
+    "output4.to_csv(\"submissions/shared_submission_{0}.csv\".format(version), index=False)\n",
+    "# Ranks 1137 with score of 0.82136."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "final score: 0.81948\n"
+     ]
+    }
+   ],
+   "source": [
+    "print \"\\nfinal score: %7.5f\"%(FinalScore(Predict_Top5(rf)))"
    ]
   },
   {
