Updating Presentation Layout

--- a/airbnb_presentation.ipynb
+++ b/airbnb_presentation.ipynb
@@ -493,7 +493,7 @@
    "metadata": {},
    "source": [
     "### Analysis of Session Data\n",
-    "Airbnb provided other data in addition to the training and test datasets. The \"Session\" dataset contains web sessions log for the users. A users activity could be indicative of intention to book."
+    "Airbnb provided other data in addition to the training and test datasets. The \"Session\" dataset contains web sessions log for the users. The activity of a user could be indicative of intention to book."
    ]
   },
   {
